--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chokidar": "^3.3.1",
+    "websocket": "^1.0.31"
+  }
 }
